--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -12,7 +12,7 @@ menu:
 
 projects:
 - {name: "Gestion de projet d'infrastructure", url: 'proj-1'}
-- {name: 'Project Two',   url: 'proj-2'}
+- {name: "POC RAG Puls-Events (Bordeaux Métropole)", url: 'proj-2'}
 - {name: 'Project Three', url: 'proj-3'}
 - {name: 'Project Four',  url: 'proj-4'}
 - {name: 'Project Five',  url: 'proj-5'}
