--- a/_config.yml
+++ b/_config.yml
@@ -8,5 +8,6 @@ plugins:   [jekyll-sitemap, jekyll-feed,  jekyll-seo-tag]
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 
 title:		   "Patrick Arbessier"
+browser_title: "Data Engineering - Patrick Arbessier"
 description: "Porfolio Data Engineering"
 author:      "Patrick Arbessier"
