--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,8 +3,8 @@
 
 menu:
 - {name: 'Portfolio', url: ''}
-- {name: 'Blog',     url: 'blog'}
-- {name: 'About',    url: 'about'}
+# - {name: 'Blog',     url: 'blog'}
+- {name: 'Profil',    url: 'profil'}
 - {name: 'Contact',  url: 'contact'}
 
 #-------------------------------
@@ -13,8 +13,8 @@ menu:
 projects:
 - {name: "Gestion de projet d'infrastructure", url: 'proj-1'}
 - {name: "POC RAG Puls-Events (Bordeaux Métropole)", url: 'proj-2'}
-- {name: 'Project Three', url: 'proj-3'}
-- {name: 'Project Four',  url: 'proj-4'}
+- {name: 'Orchestrer un pipeline de flux', url: 'proj-3'}
+- {name: 'Modéliser une infrastructure hybride',  url: 'proj-4'}
 - {name: 'Project Five',  url: 'proj-5'}
 
 #-------------------------------
